fix: justify and align comment option buttons

--- a/src/components/CommentInput/CommentInput.scss
+++ b/src/components/CommentInput/CommentInput.scss
@@ -40,11 +40,17 @@
       flex-flow: row wrap;
       justify-content: space-between;
 
-      .comment-input__options button {
-        margin-left: 0.25rem;
-        padding: 0.375rem;
-        font-size: 1rem;
-        color: $app-main-text-color;
+      .comment-input__options {
+        display: flex;
+        gap: 0.25rem;
+        button {
+          line-height: 0;
+          height: 2rem;
+          width: 2rem;
+          padding: 0.5rem;
+          font-size: 1rem;
+          color: $app-main-text-color;
+        }
       }
     }
   }
